# slib

./: .appveyor.yml  .c4droid  .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .test.c.swp  .travis.yml  Bugs  C89-incompatiables  CMakeLists.txt  CodingStyle.md  LICENSE  Make.cfg  Makefile  Makefile.am  Makefile.in  Makefile.mingw  README.md  admin  admin.c  build.bat  build.sh  buildadmin.bat  buildadmin.sh  buildslib.bat  buildslib.sh  config.h  config.h.cm  config.h.in  config.mk  config.status  configure  configure.ac  configure.in  configure.plain  makefile.am  objs.mk  p.err  rule.mk  (+9 more)
.github/workflows/: cmake.yml  codeql-analysis.yml
.xmake/: xmake.conf
.xmake/cache/: config  history
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
cmake/: acconf.sh  distclean.cmake  uninstall.cmake.in  uninstall.sh  version.sh
file/: Makefile  fcopy.c  fsize.c  iofile.c
hist/: README.md
hist/12v1.1/: administration.txt
hist/12v1.1-2016.1.1/: README.md  administration.c
hist/12v2_3.6/: admin12v2_3.6-tgth.c  admin12v2_3.6.c  sbllib.h
hist/Uncompilable/: administration.c  administration_2.c  cerror.txt
hist/Unversioned/: 01admin.c
hist/admin_v1.3.6/: admin1.3.6.c
hist/admin_v2.3.12/: admin.c  slib.c  slib.h
hist/v0.7/: slib.c  slib.h
hist/v0.9/: slib.c  slib.h
include/: getopt.h  getoptS.h  slib.h
include/slib/: astro.h  error.h  fileopt.h  fnmatch.h  general.h  getopt.h  history.h  itoa.h  math.h  overflow.h  regex.h  stack.h  timedate.h
main/: Makefile  colorprintf.c  error.c  getch.c  getopt.c  itoa.c  mret.c  mysh.c  radomnum.c  randomnum.c  sbl.c  sleepS.c
math/: Makefile  average.c  calc.c  eular.c  gcf.c  ispn.c  isrp.c  lcm.c  math.c  prtpn.c
ndless/: sbltool.c  sbltool.prg.tns  sbltool.tns
slib/sbl.xcodeproj/: project.pbxproj
slib/sbl.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
slib/sbl.xcodeproj/project.xcworkspace/xcuserdata/yuandongmei.xcuserdatad/: UserInterfaceState.xcuserstate
slib/sbl.xcodeproj/xcuserdata/yuandongmei.xcuserdatad/xcschemes/: slib.xcscheme  xcschememanagement.plist
src/: CMakeLists.txt  Makefile.in  Makefile.mingw  admin.c  astro.c  astro2.c  average.c  bsearchfile.c  calc.c  calc.c.bak  clearstack.c  colorprintf.c  config.h.in  configure  configure.ac  destorystack.c  error.c  eular.c  fcopy.c  file.c  fnmatch.c  fsize.c  gcf.c  getch.c  getlen.c  getopt.c  history.c  initstack.c  iofile.c  ispn.c  isrp.c  itoa.c  lcm.c  lib.c  malloc.c  math.c  mret.c  mtscat.c  mysh.c  permcomb.c  (+13 more)
src/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
stack/: Makefile  clearstack.c  destorystack.c  getlen.c  initstack.c  pop.c  push.c
string/: Makefile  module.c  mtscat.c  splitpathS.c
test/: CMakeLists.txt  TESTED_LIST  a.out  astro-test.c  average-test.c  bsearchfile-test.c  colorprintf-test.c  enabledtests  error-test.c  eular-test.c  fnmatch-test.c  fsize-test.c  gcf-test.c  getch-test.c  getopt-test.c  iofile-test.c  ispn-test.c  isrp-test.c  itoa-test.c  lcm-test.c  mret-test.c  mtscat-test.c  permcomb-test.c  pnlst-test.c  prtpn-test.c  sleep-test.c  splitpath-test.c  stack-test.c  stack.c  test.sh  testdrv  testdrv.c  testdrv.c.in  testdrv.h.in  tests.h  todo
test/a.out.dSYM/Contents/Resources/DWARF/: a.out
test/file/: fsize-test.c
test/main/: colorprintf-test.c  error-test.c  getopt-test.c
test/math/: eular-test.c
test/src/: average-test.c  colorprintf-test.c  getch-test.c  iofile-test.c  isrp-test.c  sleep-test.c
