file(GLOB TESTFILES "*-test.c")
string(REGEX MATCHALL "[a-z]*-" TESTNAMES ${TESTFILES})
string(REGEX REPLACE "-" ";" TESTNAMES ${TESTNAMES})
string(APPEND TESTS "{")
foreach(test IN ITEMS ${TESTNAMES})
    string(APPEND TESTS "{\"${test}\", ${test}_main}, ")
    string(APPEND TFILES "#include \"${test}-test.c\"\n")
endforeach(test)
string(APPEND TESTS "{NULL, NULL}}")
configure_file(testdrv.h.in testdrv.h @ONLY)
add_executable(testdrv testdrv.c)
target_include_directories(testdrv PRIVATE ${CMAKE_BINARY_DIR}/test)
target_include_directories(testdrv PRIVATE ${CMAKE_SOURCE_DIR}/test)
target_link_libraries(testdrv sbl)
target_link_libraries(testdrv m)
add_test(NAME sbl COMMAND testdrv)
