file(GLOB TESTFILES RELATIVE ${CMAKE_SOURCE_DIR}/test "*-test.c")
string(APPEND TESTS "{")
foreach(test IN ITEMS ${TESTFILES})
    string(REGEX REPLACE "-.*" "" testname ${test})
    string(APPEND TESTS "{\"${testname}\", ${testname}_main}, ")
    string(APPEND TFILES "#include \"${testname}-test.c\"\n")
endforeach(test)
string(APPEND TESTS "{NULL, NULL}}")
configure_file(testdrv.h.in testdrv.h @ONLY)
add_executable(testdrv testdrv.c)
add_definitions(-DLIBSBL_STATIC)
target_include_directories(testdrv PRIVATE ${CMAKE_BINARY_DIR}/test)
target_include_directories(testdrv PRIVATE ${CMAKE_SOURCE_DIR}/test)
target_link_libraries(testdrv sbl_static)
if(NOT WIN32)
    target_link_libraries(testdrv m)
endif()
add_test(NAME sbl COMMAND testdrv)
